--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
               <a href="Sistema Grid/indexGrid.html" class="card-link">Sistema Grid</a>
               <a href="Pruebas bootstrap/" class="card-link"> Bootstrap</a>
               <a href="Alitas y papas/" class= "card-link">Sistema de mi red social</a>
+              <a href="https://github.com/Majo-salgado/alitas-y-papas" class= "card-link">LINK PDF ALITAS Y PAPAS</a>
             </div>
           </div>
         </div>
