--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
               <a href="Alitas y papas/" class= "card-link">Sistema de mi red social</a>
               <a href="https://github.com/Majo-salgado/alitas-y-papas" class= "card-link">LINK PDF ALITAS Y PAPAS</a>
               <a href="BulmaCards/index.html" class= "card-link">Link a BulmaCard</a>
+              <a href="Blog/index.html" class= "card-link">Link a Blog</a>
             </div>
           </div>
         </div>
