--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
               <a href="https://github.com/Majo-salgado/alitas-y-papas" class= "card-link">LINK PDF ALITAS Y PAPAS</a>
               <a href="BulmaCards/index.html" class= "card-link">Link a BulmaCard</a>
               <a href="Blog/index.html" class= "card-link">Link a Blog</a>
+              <a href="Tesla/index.html" class= "card-link">Link a Tesla</a>
             </div>
           </div>
         </div>
