--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <br>
               <a href="Sistema Grid/indexGrid.html" class="card-link">Sistema Grid</a>
               <a href="Pruebas bootstrap/" class="card-link"> Bootstrap</a>
-              <a href="Alitas y papas/" class= "card-link">Sistema de mi red social</a>
+              <a href="https://github.com/Majo-salgado/alitasypapas.github.io" class= "card-link">Sistema de mi red social</a>
               <a href="https://github.com/Majo-salgado/alitas-y-papas" class= "card-link">LINK PDF ALITAS Y PAPAS</a>
               <a href="BulmaCards/index.html" class= "card-link">Link a BulmaCard</a>
               <a href="Blog/index.html" class= "card-link">Link a Blog</a>
